# examples

./: CMakeLists.txt  LICENSE  README.md
.circleci/: config.yml
new_entity/: CMakeLists.txt  SpecialEntity.cpp  SpecialEntity.hpp  main.cpp
simple_use/: CMakeLists.txt  example.cpp
src/: example.cpp
